--- a/configure.in
+++ b/configure.in
@@ -203,9 +203,9 @@ AM_CONDITIONAL(DBUS_CXX_TOOLS, [test "x${enable_tools}" == xset])
 
 AC_ARG_ENABLE([debug-output],[AS_HELP_STRING([--enable-debug-output],[Enable debugging output [default=no]])],[AC_DEFINE([DEBUG_ENABLED],[],[Enable debugging output])])
 
-AC_OUTPUT(Makefile dbus-cxx-1.0.pc dbus-cxx-hal/Makefile dbus-cxx/Makefile \
+AC_OUTPUT(Makefile dbus-cxx-1.0.pc dbus-cxx/Makefile \
 	doc/Makefile examples/Makefile examples/basics/Makefile \
-	examples/basics/methods/Makefile examples/basics/signals/Makefile examples/hal/Makefile \
+	examples/basics/methods/Makefile examples/basics/signals/Makefile \
 	examples/xml2cpp/Makefile examples/xml2cpp/calculator/Makefile examples/xml2cpp/hal-proxy/Makefile \
 	tools/Makefile unit-tests/Makefile)
 
