--- a/configure.in
+++ b/configure.in
@@ -21,8 +21,8 @@
 #  package specific values
 #########################################################################
 pushdef([PACKAGE_MAJOR_VERSION], [0])
-pushdef([PACKAGE_MINOR_VERSION], [1])
-pushdef([PACKAGE_MICRO_VERSION], [2])
+pushdef([PACKAGE_MINOR_VERSION], [2])
+pushdef([PACKAGE_MICRO_VERSION], [0])
 pushdef([PKG_VERSION], PACKAGE_MAJOR_VERSION.PACKAGE_MINOR_VERSION.PACKAGE_MICRO_VERSION)
 
 AC_INIT([dbus-cxx], PKG_VERSION, [rvinyard@cs.nmsu.edu])
@@ -75,7 +75,7 @@ AC_SUBST(DOXYGEN_HTML_HEADER)
 AC_SUBST(DOXYGEN_HTML_FOOTER)
 AC_SUBST(DOXYGEN_HTML_STYLESHEET)
 
-AM_INIT_AUTOMAKE([1.9 tar-ustar dist-bzip2 dist-zip])
+AM_INIT_AUTOMAKE([1.9 tar-ustar dist-bzip2 dist-zip -Wno-portability])
 AM_CONFIG_HEADER([config.h])
 AX_PREFIX_CONFIG_H([$PACKAGE/$PACKAGE-config.h],[DBUS_CXX],[config.h])
 
@@ -204,9 +204,13 @@ AM_CONDITIONAL(DBUS_CXX_TOOLS, [test "x${enable_tools}" == xset])
 
 AC_ARG_ENABLE([debug-output],[AS_HELP_STRING([--enable-debug-output],[Enable debugging output [default=no]])],[AC_DEFINE([DEBUG_ENABLED],[],[Enable debugging output])])
 
-AC_OUTPUT(Makefile dbus-cxx-1.0.pc dbus-cxx/Makefile \
-	doc/Makefile examples/Makefile examples/basics/Makefile \
-	examples/basics/methods/Makefile examples/basics/signals/Makefile \
-	examples/xml2cpp/Makefile examples/xml2cpp/calculator/Makefile examples/xml2cpp/hal-proxy/Makefile \
+#debug_default="no"
+#AC_ARG_ENABLE(debug,[AS_HELP_STRING([--enable-debug=[no/full]],[Turn on debugging #[default=${debug_default}]])],,[enable_debug=${debug_default}])
+#AS_IF([test "x${enable_debug}" == xfull],[ PROJECT_CFLAGS="$PROJECT_CFLAGS -O0 -g3 -DDEBUG" ])
+
+AC_OUTPUT(Makefile dbus-cxx-1.0.pc dbus-cxx/Makefile doc/Makefile examples/Makefile \
+	examples/basics/Makefile examples/basics/methods/Makefile examples/basics/signals/Makefile \
+	examples/xml2cpp/Makefile examples/xml2cpp/calculator/Makefile \
+	examples/xml2cpp/computer-isa/Makefile examples/xml2cpp/computer-hasa/Makefile examples/xml2cpp/hal-proxy/Makefile \
 	tools/Makefile unit-tests/Makefile)
 
