--- a/dbus-cxx-glibmm/Makefile.am
+++ b/dbus-cxx-glibmm/Makefile.am
@@ -25,7 +25,8 @@ if DBUS_CXX_GLIBMM
 lib_LTLIBRARIES = libdbus-cxx-glibmm.la
 library_includedir = $(includedir)/dbus-cxx-@PACKAGE_RELEASE@/dbus-cxx-glibmm
 
-libdbus_cxx_glibmm_la_LIBADD = $(PROJECT_LIBS) $(DBUS_CXX_GLIBMM_LIBS)
+libdbus_cxx_glibmm_la_LIBADD = $(top_builddir)/dbus-cxx/libdbus-cxx.la \
+	$(DBUS_CXX_GLIBMM_LIBS) $(PROJECT_LIBS)
 
 libdbus_cxx_glibmm_la_LDFLAGS = -version-info @LIBTOOL_SO_VERSION@
 library_include_HEADERS = dispatcher.h
