--- a/trunk/dbus-cxx/debian/control
+++ b/trunk/dbus-cxx/debian/control
@@ -2,8 +2,8 @@ Source: dbus-cxx
 Priority: extra
 Maintainer: Rick L. Vinyard, Jr. <rvinyard@cs.nmsu.edu>
 XSBC-Original-Maintainer: Rick L. Vinyard, Jr. <rvinyard@cs.nmsu.edu>
-Build-Depends: cdbs, quilt, debhelper (>= 7), autotools-dev, dbus, libdbus-1-dev, libsigc++-2.0-dev, libglibmm-2.4-dev, libpopt-dev, libexpat1-dev, doxygen, xsltproc
-Standards-Version: 3.8.0
+Build-Depends: quilt, debhelper (>= 9), autotools-dev, dbus, libdbus-1-dev, libsigc++-2.0-dev, libglibmm-2.4-dev, libpopt-dev, libexpat1-dev, doxygen, xsltproc, libcppunit-dev
+Standards-Version: 3.9.5
 Section: libs
 Homepage: http://dbus-cxx.sourceforge.net/
 
@@ -23,18 +23,18 @@ Description: C++ development headers for dbus-cxx
  developing dbus-cxx applications.
  dbus-cxx provides C++ bindings for the D-Bus library.
 
-Package: dbus-cxx-doc
-Section: doc
-Architecture: any
-Depends: dbus-cxx-dev (= ${binary:Version})
-Description: Developer's documentation for the dbus-cxx library
- This package contains developer's documentation for the dbus-cxx
- library. dbus-cxx provides C++ based bindings for the C based
- dbus library.
- The documentation can be viewed either through the devhelp
- documentation browser or through a web browser.
- If using a web browser the documentation is installed in the gtk-doc
- hierarchy and can be found at /usr/share/gtk-doc/html/dbus-cxx-API_VERSION
+#Package: dbus-cxx-doc
+#Section: doc
+#Architecture: any
+#Depends: dbus-cxx-dev (= ${binary:Version})
+#Description: Developer's documentation for the dbus-cxx library
+# This package contains developer's documentation for the dbus-cxx
+# library. dbus-cxx provides C++ based bindings for the C based
+# dbus library.
+# The documentation can be viewed either through the devhelp
+# documentation browser or through a web browser.
+# If using a web browser the documentation is installed in the gtk-doc
+# hierarchy and can be found at /usr/share/gtk-doc/html/dbus-cxx-API_VERSION
 
 Package: dbus-cxx-tools
 Section: utils
