--- a/examples/basics/types/Makefile.am
+++ b/examples/basics/types/Makefile.am
@@ -17,7 +17,7 @@
 ##   along with this software. If not see <http://www.gnu.org/licenses/>.  ##
 #############################################################################
 
-INCLUDES = $(PROJECT_CFLAGS) -I$(top_srcdir)/.
+AM_CPPFLAGS = $(PROJECT_CFLAGS) -I$(top_srcdir)/.
 METASOURCES = AUTO
 noinst_PROGRAMS = time-client time-server
 time_client_SOURCES = time_client.cpp timeval_dbus.cpp
